[package]
edition = "2021"
name = "test_mysql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.12.0"
mysql = {version = "0.1.1", package = "lunatic-mysql"}
serde = "1.0"
submillisecond = {version = "0.3.0", features = ["json"]}
